--- a/style.css
+++ b/style.css
@@ -214,6 +214,11 @@ hr{
         letter-spacing: 0px;
         text-align: left;
         color:var(--dark-purple);
+        cursor:pointer;
+    }
+
+    .question a:hover{
+        color:var(--orange);
     }
 
 }
